修改pom配置